hphp/test/zend/good/ext/standard/tests/general_functions/getservbyname_variation6.php
<?php


echo "*** Test substituting argument 1 with object values ***\n";

$protocol = "tcp";


class classWithToString
{
        public function __toString() {
                return "Class A object";
        }
}

class classWithoutToString
{
}

$variation_array = array(
  'instance of classWithToString' => new classWithToString(),
  'instance of classWithoutToString' => new classWithoutToString(),
  );


foreach ( $variation_array as $var ) {
  var_dump(getservbyname( $var ,  $protocol ) );
}
?>