hphp/test/zend/bad/ext/standard/tests/general_functions/getservbyname_variation13.php
<?php


echo "*** Test substituting argument 2 with object values ***\n";

$service = "www";


class classWithToString
{
        public function __toString() {
                return "Class A object";
        }
}

class classWithoutToString
{
}

$variation_array = array(
  'instance of classWithToString' => new classWithToString(),
  'instance of classWithoutToString' => new classWithoutToString(),
  );


foreach ( $variation_array as $var ) {
  var_dump(getservbyname( $service, $var  ) );
}
?>